--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -1,14 +1,30 @@
-@font-face {
-    font-family: 'MyCustomFont';
-    src: url('../assets/fonts/my-custom-font.woff2') format('woff2'),
-         url('../assets/fonts/my-custom-font.woff') format('woff'),
-         url('../assets/fonts/my-custom-font.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+$font-weights: (
+  100: 'thin',
+  300: 'light',
+  400: 'regular',
+  500: 'medium',
+  700: 'bold'
+);
+
+$fonts: (
+  'Roboto',
+  'Satisfy'
+);
+
+@mixin font-face($font-family) {
+  @each $weight, $name in $font-weights {
+    @font-face {
+      font-family: $font-family;
+      src: url('../fonts/#{$font-family}-#{$name}.woff2') format('woff2'),
+           url('../fonts/#{$font-family}-#{$name}.woff') format('woff'),
+           url('../fonts/#{$font-family}-#{$name}.ttf') format('truetype');
+      font-weight: $weight;
+      font-style: normal;
+    }
   }
-  
-  // Uso de la fuente en el archivo base o global
-  body {
-    font-family: 'MyCustomFont', sans-serif;
-  }
+}
+
+@each $font-family in $fonts {
+  @include font-face($font-family);
+}
   
