--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -1,11 +1,18 @@
 @import '../../../assets/styles/main.scss';
-// .footer{
-//     background-color: black;
-//     color: white;
-//     position: fixed;
-//     bottom: 0;
-//     left: 0;
-//     width: 100%;   
-//     z-index: 1000; 
-//     box-shadow: 0 rem(4) rem(2) rem(-2) gray;
-// }
+.footer{
+    background-color: $main-black;
+    color: white;
+    padding: rem(20) rem(15);
+    text-align: center;
+    line-height: rem(22);
+
+    a{
+        color: white;
+        text-decoration: none;
+        font-weight: 400;
+
+        &:hover{
+            color: $primary-color;
+        }
+    }
+}
