start projects section

--- a/src/components/sections/Home/Home.module.scss
+++ b/src/components/sections/Home/Home.module.scss
@@ -4,6 +4,7 @@
     min-height: 100%;
     box-sizing: border-box;
     position: relative;
+    height: 100vh;
 
     .text{
         background-color: blueviolet;
