--- a/src/components/sections/Projects/Projects.module.scss
+++ b/src/components/sections/Projects/Projects.module.scss
@@ -1,5 +1,74 @@
-.projects{
-    background-color:crimson;
-    min-height: 100%;
-    box-sizing: border-box;
+@import '../../../assets/styles/main.scss';
+
+
+.projects-container {
+    padding: rem(20);
+}
+
+.projects-nav {
+    display: flex;
+    justify-content: center;
+    margin-bottom: rem(20);
+    flex-wrap: wrap;
+    gap: rem(10) 0;
+
+    button {
+        background: none;
+        border: none;
+        cursor: pointer;
+        font-size: rem(14);
+        color: $main-black;
+        transition: all 0.3s;
+        text-transform: uppercase;
+        font-weight: 700;
+        padding: 0;
+
+        &.active, &:hover {
+            color: $primary-color;
+        }
+
+        &:not(:last-child)::after {
+            content: "/";
+            margin: 0 rem(15);
+            color: $main-black; 
+        }
+    }
+}
+
+.masonry-grid {
+    display: flex;
+    margin-left: rem(-15);
+    width: auto;
+  
+    &_column {
+      padding-left: rem(15);
+      background-clip: padding-box;
+    }
+}
+
+.project-card {
+    // padding: rem(15);
+    overflow: hidden;
+    transition: transform 0.3s;
+    margin-bottom: rem(15);
+
+    img {
+        width: 100%;
+        height: auto;
+        display: block;
+    }
+
+    h3 {
+        margin: rem(10) 0 rem(5);
+        font-size: rem(18);
+    }
+
+    p {
+        font-size: rem(14);
+        color: $main-black;
+    }
+
+    &:hover {
+        transform: scale(1.05); 
+    }
 }
