--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -3,12 +3,14 @@ $font-weights: (
   300: 'light',
   400: 'regular',
   500: 'medium',
+  600: 'semibold',
   700: 'bold'
 );
 
 $fonts: (
   'roboto',
-  'satisfy'
+  'satisfy',
+  'firaCode'
 );
 
 @mixin font-face($font-family) {
