--- a/src/components/sections/Home/Home.module.scss
+++ b/src/components/sections/Home/Home.module.scss
@@ -1,121 +1,128 @@
-@import '../../../assets/styles/main.scss';
+@import '/src/assets/styles/main.scss';
 .home{
-    background-color: $main-gray;
-    min-height: 100%;
-    box-sizing: border-box;
-    position: relative;
-    height: 100vh;
+  background-color: $main-gray;
+  min-height: 100%;
+  box-sizing: border-box;
+  position: relative;
+  height: 100vh;
 }
 
 .header-content {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-  }
-  .header-content_info {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  
+  &__info {
     display: flex;
     justify-content: space-between;
     align-items: end;
   }
-  .header-content_info-text {
+
+  &__info-img{
+    width: rem(60);
+  }
+
+  &__info-text {
+    font-family: $code-font;
     text-transform: uppercase;
     font-size: rem(22);
     line-height: rem(26);
   
-    // &.typing {
-    //   overflow: hidden;
-    //   margin: 0 auto;
+    &.typing {
+      overflow: hidden;
+      margin: 0 auto;
   
-    //   @media (min-width: $size-mobile) {
-    //     white-space: nowrap;
-    //     animation: typing 2s steps(30, end), flicker .5s step-end infinite;
-    //     border-right: .15em solid $primary-color;
-    //   }
-    // }
-    // strong {
-    //   font-weight: 600;
-    // }
+      @media (min-width: $size-mobile) {
+        white-space: nowrap;
+        animation: typing 2s steps(30, end), flicker .5s step-end infinite;
+        border-right: .15em solid $primary-color;
+      }
+    }
+
+    strong {
+      font-weight: 600;
+    }
   }
-//   .header-content__illustration {
-//     @media (max-width: $size-desktop) {
-//       display: none;
-//     }
-//   }
-//   .professional-profile {
-//     background-color: $primary-color;
+
+  &__illustration{
+    display: none;
+
+    @media (min-width: $size-desktop){
+      display: flex;
+      align-items: baseline;
+      gap: rem(10);
+    }
+
+    & .lamp-container{
+      position: relative;
+    }
+
+    & .lamp-illustration{
+      width: rem(144);
+    }
   
-//     .container {
-//       display: flex;
-//       justify-content: space-between;
-//       align-items: center;
-//       flex-wrap: wrap;
-//       padding-top: rem(30);
-//       padding-bottom: rem(30);
-//       gap: rem(20);
-//     }
-//     .occupation {
-//       font-size: rem(42);
-//       line-height: rem(46);
-  
-//       @media (min-width: $size-mobile) {
-//         font-size: rem(54);
-//         line-height: rem(60);
-//       }
-//     }
-//     .cv-button {
-//       display: inline-block;
-//       width: 100%;
-//       background-color: #333;
-//       text-align: center;
-//       transition: all 1s;
-  
-//       @media (min-width: $size-tablet) {
-//         background-color: transparent;
-//         width: auto;
-//       }
-  
-//       &:hover {
-//         background-color: #fff;
-  
-//         @media (min-width: $size-tablet) {
-//           background-color: transparent;
-//         }
-  
-//         img {
-//           filter: none;
-  
-//           @media (min-width: $size-tablet) {
-//             filter: brightness(0) invert(1);
-//             transition: all 0.6s;
-//           }
-//         }
-//       }
-//       a {
-//         padding: rem(10);
-//         display: inline-block;
-//         width: 100%;
-  
-//         @media (min-width: $size-tablet) {
-//           width: auto;
-//           padding: 0;
-//         }
-//       }
-  
-//       img {
-//         filter: brightness(0) invert(1);
-  
-//         @media (min-width: $size-tablet) {
-//           filter: none;
-//         }
-//       }
-//     }
-//   }
-//   .header-content__illustration {
-//     position: relative;
-  
-//     .mobile-ilus {
-//       position: absolute;
-//       bottom: rem(70);
-//       right: 0;
-//     }
-//   }
+    & .lamp-light {
+      position: absolute;
+      top: 21px;
+      left: -445px;
+      width: 500px;
+      height: 182px;
+      background: linear-gradient(
+        to bottom,
+        rgba(255, 255, 120, 0.8) 0%,
+        rgba(255, 255, 120, 0.4) 60%,
+        rgba(255, 255, 120, 0.1) 90%  
+      );
+      clip-path: polygon(
+        89% 1%, 
+        96% 26%, 
+        74% 100%, 
+        0px 100%
+      );
+      pointer-events: none;
+    }
+
+    & .computer-illustration{
+      width: rem(260);
+      position: relative;
+    right: rem(-70);
+    }
+    & .mobile-illustration{
+      width: rem(65);
+      position: relative;
+      right: 0;
+      bottom: rem(60);
+    }
+  }
+}
+.professional-profile{
+  background-color: $primary-color;
+
+  &__container{
+    padding-top: rem(40);
+    padding-bottom: rem(40);
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: rem(20);
+
+    @media (min-width: $size-tablet){
+      flex-direction: row;
+      align-items: center;
+    }
+  }
+
+  &__occupation{
+    font-size: rem(40);
+    font-family: $secondary-font;
+
+    @media (min-width: $size-mobile){
+      font-size: rem(54);
+    }
+  }
+
+  & .cv-button{
+    width: rem(35);
+  }
+}
