--- a/src/components/sections/Projects/Projects.module.scss
+++ b/src/components/sections/Projects/Projects.module.scss
@@ -1,7 +1,16 @@
-@import '../../../assets/styles/main.scss';
+@import '/src/assets/styles/main.scss';
 
 .projects {
     background-color: $main-gray;
+
+    &__link{
+        color: $primary-color;
+        font-weight: 400;
+        
+        &:hover{
+            color: $main-black;
+        }
+    }
 
     &__no-projects-message {
         text-align: center;
