--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -1,20 +1,40 @@
-@import '../../../assets/styles/main.scss';
+@import '@assets/styles/main.scss';
 
 .button {
     display: block;
     margin: rem(20) auto;
-    background-color: $primary-color;
-    color: $main-black;
     border: none;
-    padding: rem(20) rem(40);
-    font-size: rem(18);
+    padding: rem(10) rem(30);
+    font-size: rem(14);
     cursor: pointer;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 600;
 
-    &:hover {
+    @media (min-width: $size-tablet) {
+      font-size: rem(16);
+      padding: rem(15) rem(40);
+    }
+
+    &--green {
+      background-color: $primary-color;
+      color: $main-black;
+
+      &:hover {
+        background-color: $main-black;
+        color: $white;
+      }
+    }
+    
+    &--black {
       background-color: $main-black;
       color: $white;
+
+      &:hover {
+        background-color: $primary-color;
+        color: $main-black;
+      }
     }
+
+    
 }
   
