--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -1,4 +1,4 @@
-@import '/src/assets/styles/main.scss';
+@import '@assets/styles/main.scss';
 .footer{
     background-color: $main-black;
     color: $white;
