--- a/src/components/layout/Header/HeaderLogo/HeaderLogo.module.scss
+++ b/src/components/layout/Header/HeaderLogo/HeaderLogo.module.scss
@@ -1,6 +1,8 @@
 @import '@assets/styles/main.scss';
 
 .header__logo{
+    z-index: 11;
+
     &-link{
         display: flex;
         align-items: center;
