--- a/src/assets/styles/_animations.scss
+++ b/src/assets/styles/_animations.scss
@@ -16,3 +16,15 @@
         border-color: $primary-color;
     }
 }
+
+//  Show elements on scroll
+@keyframes show{
+    from{
+        opacity: 0;
+        scale: 25%;
+    }
+    to{
+        opacity: 1;
+        scale: 100%;
+    }
+}
