--- a/src/components/sections/About/About.module.scss
+++ b/src/components/sections/About/About.module.scss
@@ -1,7 +1,8 @@
 @import '@assets/styles/main.scss';
 
 .about{
-    min-height: 100%;
-    box-sizing: border-box;
-    height: 500px;
+   &__intro{
+    background-color: $main-gray;
+    padding: rem(40);
+   }
 }
