--- a/src/components/sections/About/Skills/Skills.module.scss
+++ b/src/components/sections/About/Skills/Skills.module.scss
@@ -3,6 +3,7 @@
 .skills{
     .skills-list{
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         gap: rem(20);
 
