--- a/src/components/sections/Projects/Projects.module.scss
+++ b/src/components/sections/Projects/Projects.module.scss
@@ -22,6 +22,7 @@
         display: flex;
         margin-left: rem(-15);
         width: auto;
+        margin-bottom: rem(40);
 
         &-column {
             padding-left: rem(15);
