--- a/src/components/sections/About/Slider/Slider.module.scss
+++ b/src/components/sections/About/Slider/Slider.module.scss
@@ -1,5 +1,20 @@
 @import '@assets/styles/main.scss';
 
-.swiper-container{
+.swiper__container{
     padding: rem(40) 0;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.tool{
+    list-style: none;
+    
+    &__icon{
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        width: rem(80);
+        height: rem(80);
+        transition: background-image 0.3s ease;
+    }
 }
