--- a/src/pages/projects/ProjectDetail.module.scss
+++ b/src/pages/projects/ProjectDetail.module.scss
@@ -1,1 +1,35 @@
 @import '@assets/styles/main.scss';
+
+.project-detail{
+
+    &__container{
+        padding: rem(60) rem(20);
+    }
+
+    &__info{
+        max-width: rem(600);
+        width: 100%;
+        margin: 0 auto rem(40);
+
+        li{
+            margin-bottom: rem(10);
+        }
+    }
+
+    &__button{
+        margin-bottom: rem(60);
+    }
+
+    &__masonry-grid {
+        display: flex;
+        margin-left: rem(-15);
+        width: auto;
+        margin-bottom: rem(40);
+
+        &-column {
+            padding-left: rem(15);
+            background-clip: padding-box;
+        }
+    }
+
+}
