--- a/src/pages/notFound/NotFound.module.scss
+++ b/src/pages/notFound/NotFound.module.scss
@@ -1,1 +1,49 @@
 @import '@assets/styles/main.scss';
+
+.notFound {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+    background-color: $main-gray;
+    color: $main-black;
+  
+    .notFoundContent {
+      max-width: $size-mobile;
+      padding: rem(20);
+  
+      h1 {
+        font-size: rem(150);
+        margin-bottom: rem(20);
+        color: $primary-color;
+      }
+  
+      h2 {
+        font-size: rem(30);
+        margin-bottom: rem(10);
+      }
+  
+      p {
+        font-size: rem(18);
+        margin-bottom: rem(30);
+      }
+  
+      .homeLink {
+        font-size: rem(16);
+        color: $main-black;
+        background-color: $primary-color;
+        padding: rem(10) rem(20);
+        text-decoration: none;
+        transition: background-color 0.3s ease;
+        text-transform: uppercase;
+        font-weight: 500;
+  
+        &:hover {
+          background-color: $main-black;
+          color: $white;
+        }
+      }
+    }
+  }
+  
