--- a/src/pages/privacyPolicy/PrivacyPolicy.module.scss
+++ b/src/pages/privacyPolicy/PrivacyPolicy.module.scss
@@ -1,1 +1,37 @@
 @import '@assets/styles/main.scss';
+
+.privacyPolicy{
+
+    &__container{
+        padding: rem(60) rem(20);
+    }
+
+    h2 {
+        font-size: rem(20);
+        text-transform: uppercase;
+        margin-bottom: rem(10);
+    }
+
+    ul{
+        margin-left: rem(20);
+        padding: rem(10) 0 rem(10) rem(15);
+    }
+
+    li{
+        margin-bottom: rem(10);
+        list-style: disc;
+    }
+
+    a{
+        color: $primary-color;
+        font-weight: 500;
+
+        &:hover{
+            color: $main-black;
+        }
+    }
+
+    &__group{
+        margin-bottom: rem(30);
+    }
+}
