--- a/src/pages/projects/ProjectDetail.module.scss
+++ b/src/pages/projects/ProjectDetail.module.scss
@@ -25,11 +25,18 @@
         margin-left: rem(-15);
         width: auto;
         margin-bottom: rem(40);
+        background-color: $secondary-gray;
+        padding: rem(10);
 
         &-column {
             padding-left: rem(15);
             background-clip: padding-box;
         }
+    }
+
+    &__content{
+        padding: rem(10);
+        cursor: zoom-in;
     }
 
 }
