--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -4,6 +4,7 @@ $primary-color: #5DAC6D;
 $main-gray: #E7E7E7;
 $main-black: #333333;
 $white: #ffffff;
+$red: red;
 $secondary-gray: #cccccc;
 
 /* Media Queries */
