--- a/src/components/layout/Header/SocialLinks/SocialLinks.module.scss
+++ b/src/components/layout/Header/SocialLinks/SocialLinks.module.scss
@@ -1,7 +1,14 @@
 @import '@assets/styles/main.scss';
 
-.header__socialLinks{
+.socialLinks{
     display: flex;
     gap: rem(10);
     z-index: 11;
+    
+    &__img{
+        &:hover{
+            opacity: 0.7;
+        }
+    }
+
 }
