--- a/src/components/sections/Intro/Intro.module.scss
+++ b/src/components/sections/Intro/Intro.module.scss
@@ -1,13 +1,13 @@
 @import '@assets/styles/main.scss';
 
-.home{
+.intro{
   min-height: 100%;
   box-sizing: border-box;
   position: relative;
   height: 100vh;
 }
 
-.header-content {
+.intro-content {
   position: absolute;
   bottom: 0;
   width: 100%;
