--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -74,7 +74,7 @@
     }
 }
 
-@media screen and (min-width: $size-mobile) {
+@media screen and (min-width: $size-tablet) {
     .header {
         &__button {
             display: none;
