--- a/src/components/layout/Header/NavigationMenu/NavigationMenu.module.scss
+++ b/src/components/layout/Header/NavigationMenu/NavigationMenu.module.scss
@@ -22,7 +22,7 @@
     }
 }
 
-@media screen and (min-width: $size-mobile) {
+@media screen and (min-width: $size-tablet) {
     .header__mainMenu {
         flex-direction: row;
         gap: rem(10);
